--- a/qz/index.html
+++ b/qz/index.html
@@ -123,7 +123,7 @@
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://zeroansiedade.online/"
+      location.href = "https://metodozeroansiedade.online/"
     }
   </script>
 </body>
