--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/lXN8oUT" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/PAZHUhM" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO COMPRAR AGORA!</span>
                 <span class="span-btn2">(atenção: Oferta por tempo limitado)</span>
               </a>
